added resize shortcuts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,9 +27,13 @@ setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+bind l resize-pane -R
+bind H resize-pane -L
+bind J resize-pane -D
+bind K resize-pane -U
+bind L resize-pane -R
+
+
 #### COLOUR (Solarized 256)
 
 # default statusbar colors
