fixed select pane shortcut

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ setw -g mode-keys vi
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
-bind l resize-pane -R
+bind l select-pane -R
 bind H resize-pane -L
 bind J resize-pane -D
 bind K resize-pane -U
