new tmux.conf file

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,13 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -20,7 +27,7 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
+#set -g mouse on
 
 # act like vim
 setw -g mode-keys vi
@@ -33,38 +40,21 @@ bind J resize-pane -D
 bind K resize-pane -U
 bind L resize-pane -R
 
+# scrollback history
+set -g history-limit 10000
 
-#### COLOUR (Solarized 256)
+# shorten command delay
+set -sg escape-time 1
+set -g mouse-utf8 off
 
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# set border colours
+set -g pane-border-fg white
+set -g pane-border-bg colour190
+set -g pane-active-border-fg white 
+set -g pane-active-border-bg colour34
 
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+# status bar
+set -g status-justify centre
+setw -g monitor-activity on
+set -g visual-activity on
 
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
