--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,9 @@
 set -g utf8
 set-window-option -g utf8 on
 
+# non login shell
+set -g default-command 'bash'
+
 # colors ...
 set -g default-terminal "screen-256color"
 
