added copy to clipboard and tab numbers starting at 1

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,19 +18,16 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'y' copy-pipe 'xclip -in -selection clipboard'
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
-
-# Enable mouse control (clickable windows, panes, resizable panes)
-#set -g mouse on
 
 # act like vim
 setw -g mode-keys vi
@@ -44,7 +41,7 @@ bind K resize-pane -U
 bind L resize-pane -R
 
 # scrollback history
-set -g history-limit 10000
+set -g history-limit 500000
 
 # shorten command delay
 set -sg escape-time 1
@@ -61,3 +58,12 @@ set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
+# start tab numbering at 1
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# clipboard
+# move x clipboard into tmux paste buffer 
+bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" 
+# move tmux copy buffer into x clipboard 
+bind C-y run "tmux save-buffer - | xclip -i"
