added zsh as default shell to tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,7 +3,8 @@ set -g utf8
 set-window-option -g utf8 on
 
 # non login shell
-set -g default-command 'bash'
+set -g default-command /usr/local/bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
 
 # colors ...
 set -g default-terminal "screen-256color"
