tmux: changed terminal to bash

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,12 +3,14 @@ set -g utf8
 set-window-option -g utf8 on
 
 # non login shell
-set -g default-command /usr/local/bin/zsh
-set-option -g default-shell /usr/local/bin/zsh
+set -g default-command /bin/bash
+set-option -g default-shell /bin/bash
 
 # colors ...
 set -g default-terminal "screen-256color"
 
+# set windows starting index to 1
+set -g base-index 1
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
