--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # colors ...
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # set windows starting index to 1
 set -g base-index 1
@@ -40,6 +40,7 @@ set -g history-limit 500000
 # shorten command delay
 set -sg escape-time 1
 
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # status bar
 set -g status-justify centre
