reduced config and switchd to plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,58 +1,39 @@
-# colors ...
-set -g default-terminal "xterm-256color"
-
-# set windows starting index to 1
-set -g base-index 1
-
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# enter copy mode with Escape
 unbind [
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
 
-# split panes using | and -
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
+# use vi mapping to navigate
+set-window-option -g mode-keys vi
+set -g set-clipboard off
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+# set windows starting index to 1
+set -g base-index 1
+# start tab numbering at 1
+set -g base-index 1
+set-window-option -g pane-base-index 1
 
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind H resize-pane -L
-bind J resize-pane -D
-bind K resize-pane -U
-bind L resize-pane -R
-
-# scrollback history
-set -g history-limit 500000
-
-# shorten command delay
-set -sg escape-time 1
-
-set-option -sa terminal-overrides ",xterm*:Tc"
 
 # status bar
 set -g status-justify centre
 setw -g monitor-activity on
 set -g visual-activity on
 
-# start tab numbering at 1
-set -g base-index 1
-set-window-option -g pane-base-index 1
+# Plugins
+# To install plugins:
+# -->$ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# open Tmux and install plugins with <prefix> + I 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# clipboard
-# move x clipboard into tmux paste buffer 
-bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" 
-# move tmux copy buffer into x clipboard 
-bind C-y run "tmux save-buffer - | xclip -i"
+run '~/.tmux/plugins/tpm/tpm'
+
+
+
