--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@ bind-key C-a send-prefix
 
 # enter copy mode with Escape
 unbind [
-bind Escape copy-mode
+bind Space copy-mode
 
 # use vi mapping to navigate
 set-window-option -g mode-keys vi
