tmux: fixed copy to clipboard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,10 @@ set -g base-index 1
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
+# key bindings 
+unbind-key -T copy-mode-vi v
+bind-key -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle  # Begin selection in copy mode.
 
 # status bar
 set -g status-justify centre
@@ -33,7 +37,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+set -g @override_copy_command 'xsel -b'
+
+
 run '~/.tmux/plugins/tpm/tpm'
-
-
-
