added install instructions and updated dotfiles accordingly

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,5 +39,6 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @override_copy_command 'xsel -b'
 
+set-option -g default-shell /bin/zsh
 
 run '~/.tmux/plugins/tpm/tpm'
