tmuxinator: remove one pane from source window

--- a/tmuxinator/8450.yml
+++ b/tmuxinator/8450.yml
@@ -3,10 +3,9 @@ root: ~/Dev/8450/qcom-8450
 
 windows:
   - source:
-      layout: 5fe8,254x72,0,0{127x72,0,0[127x36,0,0,0,127x35,0,37,3],126x72,128,0,1}
+      layout: even-horizontal
       panes:
-        - #empty  
-        - #empty  
+        - cd scripts
         - nvim
   - device:
       layout: 5fe8,254x72,0,0{127x72,0,0[127x36,0,0,0,127x35,0,37,3],126x72,128,0,1}
