tmux: enable clipboard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,10 +9,10 @@ bind Space copy-mode
 
 # use vi mapping to navigate
 set-window-option -g mode-keys vi
-set -g set-clipboard off
-
-# set windows starting index to 1
-set -g base-index 1
+set -g set-clipboard on
+set -g terminal-features ',rxt-unicode-256color:clipboard'
+# set windows starting index to 2
+set -g base-index 2
 # start tab numbering at 1
 set -g base-index 1
 set-window-option -g pane-base-index 1
@@ -37,7 +37,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-set -g @override_copy_command 'xsel -b'
+# set -g @override_copy_command 'xsel -b'
 
 set-option -g default-shell /bin/zsh
 
