--- a/zsh/zsh_snap.rc
+++ b/zsh/zsh_snap.rc
@@ -36,19 +36,21 @@ fcd() {
     fi
 }
 
-fedit() {
-    file=$(fdfind . -t f $1 | fzf --height=80% --border=sharp \
-    --preview='tree -C {}' --preview-window='45%,border-sharp' \
-    --prompt='Edit file > ')
-    if [ ! -z "$file" ]; then
-        $EDITOR $file
-    fi
-}
-
 ffind() {
-    file=$(fdfind . -t f $1 | fzf --height=80% --border=sharp \
-    --preview='tree -C {}' --preview-window='45%,border-sharp' \
-    --prompt='Edit file > ')
+    export FZF_TEMP_TARGETDIR=$1
+
+    file=$(fdfind . -t f $FZF_TEMP_TARGETDIR | fzf --multi --height=80% --border=sharp \
+    --preview='cat {}' --preview-window='45%,border-sharp' \
+    --prompt='Edit file > ' \
+    --bind='ctrl-d:change-prompt(Dirs > )' \
+    --bind='ctrl-d:+reload(fdfind . -t d $FZF_TEMP_TARGETDIR)' \
+    --bind='ctrl-d:+change-preview(tree -C {})' \
+    --bind='ctrl-d:+refresh-preview' \
+    --bind='ctrl-f:change-prompt(Files > )' \
+    --bind='ctrl-f:+reload(fdfind . -t f $FZF_TEMP_TARGETDIR)' \
+    --bind='ctrl-f:+change-preview(cat {})' \
+    --bind='ctrl-f:+refresh-preview' \
+    )
     echo $file
 }
 
