--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,4 +41,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set-option -g default-shell /bin/zsh
 
+set -g pane-active-border-style fg=red
+set -g pane-border-style fg=white
+
 run '~/.tmux/plugins/tpm/tpm'
