--- a/zsh/zsh_snap.rc
+++ b/zsh/zsh_snap.rc
@@ -4,65 +4,9 @@ if [ -f '/home/inarodoslawsky/google-cloud-sdk/path.zsh.inc' ]; then . '/home/in
 # The next line enables shell command completion for gcloud.
 if [ -f '/home/inarodoslawsky/google-cloud-sdk/completion.zsh.inc' ]; then . '/home/inarodoslawsky/google-cloud-sdk/completion.zsh.inc'; fi
 
-export EDITOR="nvim"
+# The next line updates PATH for the NLO
+if [ -f '/home/inarodoslawsky/Snapchat/Dev/_nlo_/detail/scripts/path.shell.inc' ]; then . '/home/inarodoslawsky/Snapchat/Dev/_nlo_/detail/scripts/path.shell.inc'; fi
 
 export GOOGLE_CLOUD_PROJECT=snaplab-993
 export GOOGLE_APPLICATION_CREDENTIALS=$HOME/.config/gcloud/application_default_credentials.json
-
-adbdeviceFunc() {
-    if [[ $1 == "cv" ]]; then
-        echo "Looking for CV device"
-        dev_sn="$(adb devices | grep _cv | head -1 | awk '{print $1}')"
-    else
-        echo "Looking for APP devices"
-        dev_sn="$(adb devices | grep _app | head -1 | awk '{print $1}')"
-    fi
-
-    if [[ $dev_sn == "" ]]; then
-        echo "Device not found!"
-        exit 1
-    else
-        echo "Device $dev_sn found, setting ANDROID_SERIAL env"
-        export ANDROID_SERIAL=$dev_sn
-    fi
-}
-
-fcd() {
-    dir=$(fdfind . -t d $1 | fzf --height=80% --border=sharp \
-    --preview='tree -C {}' --preview-window='45%,border-sharp' \
-    --prompt='Dirs > ')
-    if [ ! -z "$dir" ]; then
-        cd $dir
-    fi
-}
-
-ffind() {
-    export FZF_TEMP_TARGETDIR=$1
-
-    file=$(fdfind . -t f $FZF_TEMP_TARGETDIR | fzf --multi --height=80% --border=sharp \
-    --preview='cat {}' --preview-window='45%,border-sharp' \
-    --prompt='Files > ' \
-    --bind='ctrl-d:change-prompt(Dirs > )' \
-    --bind='ctrl-d:+reload(fdfind . -t d $FZF_TEMP_TARGETDIR)' \
-    --bind='ctrl-d:+change-preview(tree -C {})' \
-    --bind='ctrl-d:+refresh-preview' \
-    --bind='ctrl-f:change-prompt(Files > )' \
-    --bind='ctrl-f:+reload(fdfind . -t f $FZF_TEMP_TARGETDIR)' \
-    --bind='ctrl-f:+change-preview(cat {})' \
-    --bind='ctrl-f:+refresh-preview' \
-    )
-    echo $file
-}
-
-autoload adbdeviceFunc
-
-alias fd="fdfind"
-alias ff="ffind"
-
-alias adbApp="adbdeviceFunc app"
-alias adbCv="adbdeviceFunc cv"
-alias adbRR="adb root && adb remount"
-
-alias gitBc="git branch --show-current"
-alias gitLp="git log --pretty=oneline"
 
