tmux: change current window highlighting

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,5 +43,6 @@ set-option -g default-shell /bin/zsh
 
 set -g pane-active-border-style fg=red
 set -g pane-border-style fg=white
+setw -g window-status-current-format "#[reverse] #I:#W"
 
 run '~/.tmux/plugins/tpm/tpm'
